--- a/Wheel_Inspection.html
+++ b/Wheel_Inspection.html
@@ -39,11 +39,11 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
-                <div class="carousel slide" id="tivm3PZjkK" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="tivn39KYEx" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tivm3PZjkK" data-bs-target="#tivm3PZjkK"></li><li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#tivm3PZjkK" data-bs-target="#tivm3PZjkK"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tivm3PZjkK" data-bs-target="#tivm3PZjkK"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tivm3PZjkK" data-bs-target="#tivm3PZjkK"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tivm3PZjkK" data-bs-target="#tivm3PZjkK"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tivn39KYEx" data-bs-target="#tivn39KYEx"></li><li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#tivn39KYEx" data-bs-target="#tivn39KYEx"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tivn39KYEx" data-bs-target="#tivn39KYEx"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tivn39KYEx" data-bs-target="#tivn39KYEx"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tivn39KYEx" data-bs-target="#tivn39KYEx"></li>
                         
                     </ol>
                     <div class="carousel-inner">
@@ -76,11 +76,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tivm3PZjkK">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tivn39KYEx">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tivm3PZjkK">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tivn39KYEx">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -650,7 +650,7 @@
             </div>
         </div>
     </nav>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2856904" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/web-page-maker.html">Web Page Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2856904" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/html-builder.html">Free HTML5 Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
