--- a/About.html
+++ b/About.html
@@ -77,7 +77,7 @@
                 <div class="col-12 col-lg">
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style display-2">Hello,</h6>
-                        <p class="mbr-text mbr-fonts-style mb-4 display-4">I'm Kurt, a fourth year mechanical engineering student at The University of British Columbia. My passions include but are not limited to manufacturing and R&amp;D, with a strong focus on sustainability. I'm interested in technology that helps transition the world to a more innovative and sustainable future.&nbsp;<br><br>I was born and raised in Vancouver, BC, Canada by immigrant parents. English is my primary language but I am also proficient in Mandarin and understand Shanghainese dialect.<br></p>
+                        <p class="mbr-text mbr-fonts-style mb-4 display-4">I'm Kurt, a Graduate Mechanical Engineer from The University of British Columbia. My passions include but are not limited to manufacturing and R&amp;D, with a strong focus on sustainability. I'm interested in technology that helps transition the world to a more innovative and sustainable future.&nbsp;<br><br>I was born and raised in Vancouver, BC, Canada by immigrant parents. English is my primary language but I am also proficient in Mandarin and understand Shanghainese dialect.<br></p>
                         
                     </div>
                 </div>
@@ -255,7 +255,7 @@
             </button>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2856904" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with &#8204;</p><a style="z-index:1" href="https://mobirise.com"> Website Builder Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2856904" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/landing-page-software.html">Landing Page Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
